syntax = "proto3";

package ai.floedb.floecat.tenant;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.tenant.rpc";
option java_outer_classname = "TenantProto";

import "common/common.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

message Tenant {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
  string display_name = 2;
  optional string description = 3;
  google.protobuf.Timestamp created_at = 10;
}

message TenantSpec {
  optional string display_name = 1;
  optional string description = 2;
}

// ====== Requests / Responses ======

message ListTenantsRequest {
  ai.floedb.floecat.common.PageRequest page = 1;
}

message ListTenantsResponse {
  repeated Tenant tenants = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

message CreateTenantRequest {
  TenantSpec spec = 1;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 98;
}

message CreateTenantResponse {
  Tenant tenant = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message GetTenantRequest {
  ai.floedb.floecat.common.ResourceId tenant_id = 1;
}

message GetTenantResponse {
  Tenant tenant = 1;
}

message UpdateTenantRequest {
  ai.floedb.floecat.common.ResourceId tenant_id = 1;
  TenantSpec spec = 2;
  google.protobuf.FieldMask update_mask = 3;
  ai.floedb.floecat.common.Precondition precondition = 98;

}

message UpdateTenantResponse {
  Tenant tenant = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message DeleteTenantRequest {
  ai.floedb.floecat.common.ResourceId tenant_id = 1;
  ai.floedb.floecat.common.Precondition precondition = 98;
}

message DeleteTenantResponse {
  ai.floedb.floecat.common.MutationMeta meta = 1;
}

// ====== Service ======

service TenantService {
  rpc ListTenants (ListTenantsRequest) returns (ListTenantsResponse);
  rpc GetTenant (GetTenantRequest) returns (GetTenantResponse);
  rpc CreateTenant (CreateTenantRequest) returns (CreateTenantResponse);
  rpc UpdateTenant (UpdateTenantRequest) returns (UpdateTenantResponse);
  rpc DeleteTenant (DeleteTenantRequest) returns (DeleteTenantResponse);
}
